# AdventOfCode2025

./: .gitignore  Makefile  README.md
.github/workflows/: coverage.yml  rust.yml
day01/: Cargo.toml
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/src/: lib.rs  main.rs
day04/: Cargo.toml
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/src/: lib.rs  main.rs
day06/: Cargo.toml
day06/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/src/: lib.rs  main.rs
day10/: Cargo.toml  Makefile  note
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day12/: Cargo.toml
day12/src/: lib.rs  main.rs
filelib/: Cargo.toml
filelib/src/: lib.rs
gridlib/: Cargo.toml  Makefile
gridlib/src/: direction.rs  grid.rs  gridcoord.rs  lib.rs
mathlib/: Cargo.toml  Makefile
mathlib/src/: distance.rs  interpolation.rs  lib.rs  lines.rs  modulus.rs  multiples.rs  polygon.rs
petgraphtutorial/: .gitignore  Cargo.toml  Makefile  README.md
petgraphtutorial/src/: main.rs
template/: Cargo.toml
template/src/: lib.rs  main.rs
