[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colog = "1.3.0"
filelib = { path = "../filelib" }
mathlib = { path = "../mathlib" }
log = { version = "0.4.22", features=["max_level_trace", "release_max_level_warn"] }