[package]
name = "day12"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colog = "1.4.0"
filelib = { path = "../filelib" }
log = { version = "0.4.29", features=["max_level_trace", "release_max_level_warn"] }
